smartemission/services/gost-dashboard/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: gost-dashboard-deployment
  namespace: smartemission
  labels:
    app: gost-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gost-dashboard
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: gost-dashboard
    spec:
      containers:
      - name: gost-dashboard
        image: smartemission/se-gostdashboard:1.0.0
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
        resources:
          limits:
            cpu: "50m"
            memory: "100M"
          requests:
            cpu: "50m"
            memory: "100M"
        ports:
        - containerPort: 8080
