smartemission/services/gost-dashboard/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin
  namespace: smartemission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /gost-dashboard
        backend:
          serviceName: gost-dashboard-service
          servicePort: 8080
